--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
                 <p>Vegetables</p>
             </div>
             <div class="botton">
-                <a class="botton_facebook" href="https://www.facebook.com/Xvideo-457980818352327">
+                <a class="botton_facebook" href>
                     <img src=./img/btn_facebook.png>
                 </a>
-                <a class="botton_instagram" href="https://www.instagram.com/xvideo.com4/">
+                <a class="botton_instagram" href>
                     <img src=./img/btn_instagram.png>
                 </a>
                 <div class="line_login"></div>
                 <a class="botton_login_box botton_login" href>LOGIN</a>
-                <a class="botton_join_box botton_join" href="https://www.xvideos.com/account/create">JOIN</a>
+                <a class="botton_join_box botton_join" href>JOIN</a>
             </div>
         </div>
         <div class="nav_box">
